--- a/select-pubs.html
+++ b/select-pubs.html
@@ -3,16 +3,26 @@
 
 	<font face="Arial" size="2">  
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#800080"><b>
-	Program Repair</b></font></p>
+	Automatic Programming and Program Repair</b></font></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>SemFix: Program Repair via  Semantic Analysis (
-	<a href="pdf/ICSE13-SEMFIX.pdf"><font color="#800080">PDF</font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Hoang D.T. Nguyen, Dawei Qi,  Abhik Roychoudhury, Satish Chandra</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference  on Software Engineering (ICSE) 2013.</p>
+
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>AutoCodeRover: Autonomous Program Improvement(
+	<a href="https://arxiv.org/abs/2404.05427"><font color="#800080">Paper</font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+	Yuntong Zhang, Haifeng Ruan, Zhiyu Fan, Abhik Roychoudhury</p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/International Symposium on Software Testing and Analysis (ISSTA) 2024.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
+		
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>SemFix: Program Repair via  Semantic Analysis (
+	<a href="pdf/ICSE13-SEMFIX.pdf"><font color="#800080">PDF</font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+	Hoang D.T. Nguyen, Dawei Qi,  Abhik Roychoudhury, Satish Chandra</p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference  on Software Engineering (ICSE) 2013.</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
+	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 	<b>
 	Angelix: Scalable Multiline Program Patch Synthesis via Symbolic Analysis 
-	(<a href="http://www.comp.nus.edu.sg/~abhik/pdf/ICSE16-angelix.pdf"> PDF </a>)</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 	Sergey Mechtaev, Jooyong Yi, Abhik Roychoudhury</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference  on Software Engineering (ICSE) 2016.</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 	<b>DirectFix: Looking for Simple Program Repairs ( 	<a href="pdf/ICSE15-directfix.pdf"><font color="#800080">PDF</font></a> )</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 	Sergey Mechtaev, Jooyong Yi, Abhik Roychoudhury</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference  on Software Engineering (ICSE) 2015.</p> 
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	(<a href="http://www.comp.nus.edu.sg/~abhik/pdf/ICSE16-angelix.pdf"> PDF </a>)</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 	Sergey Mechtaev, Jooyong Yi, Abhik Roychoudhury</p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference  on Software Engineering (ICSE) 2016.</p>
+		
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Automated Program Repair (
 	<a href="https://www.comp.nus.edu.sg/~abhik/pdf/cacm19.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Claire Le Goues, Michael 
@@ -33,19 +43,14 @@
 	<span class="scopediv body" id="body4"><span class="section section1"> 	
 	<span class="scopediv pageHeader" id="pageHeader4"> 	
 	<span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson4"> 	
-	<span class="scopediv ofUserUser ofUser" id="ofUserUser4"> 	Böhme</span></span></span></span></span></span>, 
+	<span class="scopediv ofUserUser ofUser" id="ofUserUser4"> 	BÃ¶hme</span></span></span></span></span></span>, 
 	Van Thuan Pham, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">23rd ACM Conference on 
 	Computer and Communications Security (CCS) 2016.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Directed Greybox Fuzzing (
 	<a href="http://www.comp.nus.edu.sg/~abhik/pdf/CCS17.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Marcel 
-	<span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString5"> 	
-	<span class="scopediv body" id="body5"><span class="section section1"> 	
-	<span class="scopediv pageHeader" id="pageHeader5"> 	
-	<span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson5"> 	
-	<span class="scopediv ofUserUser ofUser" id="ofUserUser5"> 	Böhme</span></span></span></span></span></span>, 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Marcel BÃ¶hme, 
 	Van-Thuan Pham, Manh-Dung Nguyen, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">24th ACM Conference on 
 	Computer and Communications Security (CCS) 2017.</p>
@@ -56,22 +61,11 @@
 	<a href="https://www.securityweek.com/researchers-introduce-smart-greybox-fuzzing">
 	Sample News 2 </a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Van-Thuan Pham, Marcel 
-	<span class="scopediv profilePagePersonStringStringString profilePage" id="profilePagePersonStringStringString8"> 	
-	<span class="scopediv body" id="body8"><span class="section section1"> 	
-	<span class="scopediv pageHeader" id="pageHeader8"> 	
-	<span class="scopediv ofPersonPerson ofPerson" id="ofPersonPerson8"> 	
-	<span class="scopediv ofUserUser ofUser" id="ofUserUser8"> 	Böhme</span></span></span></span></span></span>, 
+	BÃ¶hme, 
 	Andrew E. Santosa, Alexandru Razvan Caciulescu, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE Transactions on Software 
 	Engineering, 47(9), pages 1980-1997, Sep 2021.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<hr>   
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#800080"><b>
-	Other works on Software Testing and Analysis</b></font></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Detecting Energy Bugs and  Hotspots in Mobile apps</b> 
-(<b><a href="./pdf/fse14.pdf"> PDF </a></b>) </p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhijeet Banerjee, Lee Kee Chong, Sudipta  Chattopadhyay, Abhik Roychoudhury</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM SIGSOFT International  Symposium on the Foundations of Software Engineering (FSE),&nbsp;2014.</p> 
-	</font>
-	<p style="margin-left: 0px; margin-right: 0px"> <font face="Arial" size="2">
-	<b>Chronos: A Timing Analyzer for Embedded Software<font color="#800080">&nbsp;</font>(
-	<a href="pdf/scp07.pdf">PDF</a> )</b><br> 	Xianfeng Li, Yun Liang, Tulika Mitra and Abhik Roychoudhury<br>Science of Computer Programming, Volume 69,  December 2007.</font><br>   </p>   <hr>  </HTML> 
+		
+	  </HTML> 
