--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
 	[<a href="https://nus-tss.github.io/">TSS Group</a>]
-		[<a href="https://spartan-nus.github.io/">SPARTAN Effort</a>]
+		[<a href="select-pubs.html">Selected Papers</a>]
 		[<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">Google Scholar</a>]
 	 [<a href="papers.html">PAPERS</a>]
 	 [<a href="service.html">SERVICE</a>]
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
