--- a/select-pubs.html
+++ b/select-pubs.html
@@ -11,6 +11,12 @@
 	Yuntong Zhang, Haifeng Ruan, Zhiyu Fan, Abhik Roychoudhury</p> 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/International Symposium on Software Testing and Analysis (ISSTA) 2024.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
+
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>SpecRover: Code Intent Extraction via LLMs(
+	<a href="https://arxiv.org/pdf/2408.02232"><font color="#800080">PDF/font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+	Haifeng Ruan, Yuntong Zhang, Abhik Roychoudhury</p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM/IEEE International Conference  on Software Engineering (ICSE) 2025.</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
 		
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>SemFix: Program Repair via  Semantic Analysis (
 	<a href="pdf/ICSE13-SEMFIX.pdf"><font color="#800080">PDF</font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
@@ -67,6 +73,7 @@
 	<hr>   
 		
 	  </HTML> 
+
 
 
 
