--- a/select-pubs.html
+++ b/select-pubs.html
@@ -13,7 +13,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>SpecRover: Code Intent Extraction via LLMs(
-	<a href="https://arxiv.org/pdf/2408.02232"><font color="#800080">PDF/font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+	<a href="https://arxiv.org/pdf/2408.02232"><font color="#800080">PDF</font></a>  )&nbsp;</b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
 	Haifeng Ruan, Yuntong Zhang, Abhik Roychoudhury</p> 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM/IEEE International Conference  on Software Engineering (ICSE) 2025.</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>  
@@ -73,6 +73,7 @@
 	<hr>   
 		
 	  </HTML> 
+
 
 
 
