--- a/papers.html
+++ b/papers.html
@@ -104,7 +104,7 @@
 		<a href ="https://arxiv.org/pdf/2502.13767">Agentic AI Software Engineers: Programming with Trust</a>
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Corina Păsăreanu, Michael Pradel, Baishakhi Ray</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Communications of the ACM (CACM), To appear.<br>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Communications of the ACM (CACM), 69(5), May 2026.<br>
 		(<i> Released in arxiv Feb 19 2025, coinciding with AutoCodeRover acquisition announcement</i>) </p> 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
@@ -1031,6 +1031,7 @@ Video</a>
 	</font></font></font>
 	<H2> <font face="Arial" size="4" color="#800000">Book</font></H2>  <HR> <p><font face="Arial" size="2"><b><a href="Book/AbhikESBook09.html"> <font color="#800080">Embedded Systems and Software Validation</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><br> Abhik Roychoudhury&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Book from Elsevier (formerly Morgan Kaufmann), 2009. Officially translated to Mandarin by  Tsinghua University Press.</font></p>   <font face="Arial" size="2"> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> <a href="http://www.nowpublishers.com/articles/foundations-and-trends-in-electronic-design-automation/EDA-037"> <font color="#800080">Time Predictable Embedded  Software on Multi-core Platforms: Analysis and Optimization</font></a><font color="#800080"> 	( <a href="pdf/predictability-journal.pdf"><font color="#800080">&nbsp;PDF</font></a>  	)</font></b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Sudipta Chattopadhyay, Abhik Roychoudhury,  Jakob Rosen, Petru Eles, Zebo Peng</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Foundations and Trends in  Electronic Design Automation, 8(3-4), pages 199-356, 2014.</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#FF0000"><i>This is  a monograph (~175 pages) describing advances in the area.</i></font></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    <hr>  </font>   </BODY> </HTML> 
+
 
 
 
