--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 		He received his PhD in Computer Science 
 		from <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001. Research from Abhik's group at NUS
-		has impacted the theory and practice of software engineering over the years, particularly in software testing and program repair.
+		has impacted the theory and practice of software engineering over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
-		helped build the foundations of program repair as a field. The group's research on program repair
+		helped build the foundations of program repair as a field. The group's ideas on program repair
 		subsequently led to research on building trusted AI agents for code, 
 		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
@@ -349,6 +349,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
