--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, 
-		recognized for contributions to 
-		automated program repair and fuzz testing.
+		recognized for contributions to program repair and fuzz testing.
 
 		
 		
@@ -349,6 +348,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
