--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 		where he leads a research team on trustworthy and secure software engineering (<a href="https://nus-tss.github.io/">TSS group<a>).
 		He received his PhD in Computer Science 
 		from <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
-		and has been a faculty member at NUS School of Computing since 2001. Research from Abhik's group at NUS
-		has contributed to the theory <i>and</i> practice of software engineering over the years.
+		and has been a faculty member at NUS School of Computing since 2001. Research works from Abhik's group at NUS
+		have positively impacted the theory <i>and</i> practice of software engineering over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
 		helped build the foundations of program repair as a field. The group's ideas on program repair
 		led to research on building trusted AI agents for code, 
@@ -348,6 +348,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
