--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 		and has been a faculty member at NUS School of Computing since 2001. Research works from Abhik's group at NUS
 		have impacted both the theory <i>and</i> practice of software engineering over the years.
 	    Works on <a href="https://abhikrc.com/Students/Sergey.pdf">semantic program repair</a> 
-		helped build the foundations of program repair as a field. The group's ideas on program repair
-		led to research on building trusted AI agents for code, 
-		such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. This led to the 
+		helped build the foundations of program repair as a field. The group's ideas on program repair and specification inference
+		led to research on building trusted AI agents for code, such as <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover</a>. 
+		This led to the 
 		<a href ="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">
 		acquisition</a> of a NUS spinoff AutoCodeRover for integration into the widely-used
 		<a href="https://en.wikipedia.org/wiki/SonarQube">SonarQube</a> static analyser. 
@@ -348,6 +348,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
