--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 		<br><br>
 		<ul>
 			<li> <font face="Arial">
+			We get many requests to collaborate on agentic AI. 
+			If you want to work with us, please contact Vivien, vivien@nus.edu.sg
+			</font></li>
+			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
 			<li>
 	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> to appear in Communications of the ACM. <br>
@@ -348,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
