--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<ul>
 			<li> <font face="Arial"><i>
 			We get many requests to collaborate on agentic AI. 
-			If you want to work with us, please contact Vivien, vivien@nus.edu.sg</i>
+			If you want to work with us, please first contact Vivien, vivien@nus.edu.sg</i>
 			</font></li>
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
@@ -352,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
