--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         
-	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
-		<br><br>
-		<ul>
-			<li> <font face="Arial"><i>
+	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !!
+       <br> <font face="Arial"><i>
 			We get many requests to collaborate on agentic AI. 
 			If you want to work with us, please first contact Vivien, vivien@nus.edu.sg</i>
-			</font></li>
+			</font>
+		<br><br>
+		<ul>
+			
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
 			<li>
@@ -352,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
