--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !!
        <br> <font face="Arial"><i>
-			We get various requests to collaborate in agentic AI. 
+			We get various requests to collaborate. 
 			If you want to work with us, please first contact Vivien, vivien@nus.edu.sg</i>
 			</font>
 		<br><br>
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
