--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		International Conference on Software Engineering (ICSE) <a href = "https://www.icse-conferences.org/mostinfluential.html">Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
-		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, 
+		Abhik is a <a href="https://awards.acm.org/award-recipients/roychoudhury_UJ52779">Fellow of the ACM</a>, 
 		recognized for contributions to program repair and fuzz testing.
 
 		
@@ -352,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
