--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	[<a href="https://nus-tss.github.io/">TSS Group</a>]
+	[<a href="https://research.nus.edu.sg/spartan/nus-tss/">TSS Group</a>]
 		[<a href="select-pubs.html">Selected Papers</a>]
 		[<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">Google Scholar</a>]
 	 [<a href="papers.html">PAPERS</a>]
@@ -58,7 +58,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         
-	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !!
+	<li> <font face="Arial"><b><a href="https://research.nus.edu.sg/spartan/">SPARTAN</a></b> effort in Agentic AI research launched !!
        <br> <font face="Arial"><i>
 			We get various requests to collaborate. 
 		    We welcome collaborations, but please first contact Vivien, vivien@nus.edu.sg</i>
@@ -352,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
