--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
-	<li><font face="Arial"><a href="https://spartan-nus.github.io/">[SPARTAN effort in Agentic AI@NUS]</a></font></li>
+	<li><font face="Arial"><a href="https://research.nus.edu.sg/spartan/">[SPARTAN effort in Agentic AI@NUS]</a></font></li>
 	<li><font face="Arial">
-	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
+	<a href ="https://research.nus.edu.sg/spartan/nus-tss/">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
 	 	
 <hr>   	
@@ -352,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
