--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ Invited Talk, at ACM India Annual Event, 2026. </p>
 <br>
 
 <li><p><font face="Arial">
-Distinguished Lecture at Max-Planck Institute, 2024.  <br> Similar talks were given at other venues.
-
+Distinguished Lecture at Max-Planck Institute, 2024.  <br> 
+Distinguished Lecture, TU Delft Netherlands, 2025.
 </p>
 
 
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
