--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	[<a href="https://research.nus.edu.sg/spartan/nus-tss/">TSS Group</a>]
+	[<a href="https://nus-tss.github.io/">TSS Group</a>]
 		[<a href="select-pubs.html">Selected Papers</a>]
 		[<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">Google Scholar</a>]
 	 [<a href="papers.html">PAPERS</a>]
@@ -188,7 +188,7 @@
 	[Google Scholar Profile]</a></font></li>
 	<li><font face="Arial"><a href="https://research.nus.edu.sg/spartan/">[SPARTAN effort in Agentic AI@NUS]</a></font></li>
 	<li><font face="Arial">
-	<a href ="https://research.nus.edu.sg/spartan/nus-tss/">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
+	<a href ="https://nus-tss.github.io/">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
 	 	
 <hr>   	
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
