--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         
-	<li> <font face="Arial"><b><a href="https://research.nus.edu.sg/spartan/">SPARTAN</a></b> effort in Agentic AI research launched !!
+	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !!
        <br> <font face="Arial"><i>
 			We get various requests to collaborate. 
 		    We welcome collaborations, but please first contact Vivien, vivien@nus.edu.sg</i>
@@ -186,7 +186,7 @@
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
-	<li><font face="Arial"><a href="https://research.nus.edu.sg/spartan/">[SPARTAN effort in Agentic AI@NUS]</a></font></li>
+	<li><font face="Arial"><a href="https://spartan-nus.github.io/">[SPARTAN effort in Agentic AI@NUS]</a></font></li>
 	<li><font face="Arial">
 	<a href ="https://nus-tss.github.io/">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
