--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<ul>
 			
 			<li> <font face="Arial">
-				<a href="https://spartan-nus.github.io/ai4code-roundtable">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
+				<a href="https://medium.com/@smkang96/ai-for-code-industry-roundtable-discussing-the-future-of-software-engineering-9a795601ab1e">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
 			<li>
 	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> to appear in Communications of the ACM. <br>
 		<li>
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
