--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 		
 
 	<li> <p> <font face="Arial">	
-		Honored to be the inaugural recipient of the National University of Singapore (NUS) Outstanding Graduate Mentor Award in 2024. 
+		Honored to be the inaugural recipient of the National University of Singapore (NUS) Outstanding Graduate Mentor Award. 
 		Following is a photo taken at the award ceremony with past and present members of <a href = "https://nus-tss.github.io/">
 			TSS group</a>.
 		 </p>
@@ -353,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
