--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 			</font>
 		<br><br>
 		<ul>
+			<li> Hiring postdoc in <a href="https://spartan-nus.github.io/agentfuture/">NRF Investigator Project</a> 
+			on Trusted Coding Agents
+			</li>
 			<li> <b><a href="https://ai-4-pr.github.io">AI for Program Reasoning</a></b> (2026-30), starting under NRF AI for Science call. 
 			</li>
 			<li> <font face="Arial">
@@ -354,6 +357,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
