--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<li> Hiring postdoc in <a href="https://spartan-nus.github.io/agentfuture/">NRF Investigator Project</a> 
 			on Trusted Coding Agents
 			</li>
-			<li> <b><a href="https://ai-4-pr.github.io">AI for Program Reasoning</a></b> (2026-30), NRF AI for Science project. 
+			<li> <b><a href="https://ai4pr.github.io">AI for Program Reasoning</a></b> (2026-30), NRF AI for Science project. 
 			</li>
 			<li> <font face="Arial">
 				<a href="https://medium.com/@smkang96/ai-for-code-industry-roundtable-discussing-the-future-of-software-engineering-9a795601ab1e">AI for Code Industry Roundtable</a>, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
@@ -357,6 +357,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
