--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
 		(Test-of-time award) for symbolic analysis based program repair, and
 		IEEE New Directions Award 2022 for contributions to symbolic execution. 
 		Abhik is a <a href="https://awards.acm.org/award-recipients/roychoudhury_UJ52779">Fellow of the ACM</a>, 
-		recognized for contributions to program repair and fuzz testing.
+		for contributions to program repair and fuzz testing. 
+
+		Abhik is originally from Calcutta, India and is cuurently settled in Singapore as a Singapore (naturalised) citizen.	
 
 		
 		
@@ -357,6 +359,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
